<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidMissingOnClickHandler -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:onClick="homeNav"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:onClick="showAlertDialog"
            android:title="@string/exit"
            />

    </group>


</menu>