<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="408dp"
                android:layout_height="284dp"
                android:layout_marginTop="10dp"
                android:minHeight="300dp"
                app:cardBackgroundColor="#EFEDE9"
                app:cardCornerRadius="25dp"
                app:cardElevation="16dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/textbatman"
                    android:layout_width="112dp"
                    android:layout_height="38dp"
                    style="@style/textstyle"
                    android:text="@string/batman"
                    tools:ignore="MissingConstraints"
                     />

                <ImageView
                    android:id="@+id/imagebatman"
                    android:layout_width="145dp"
                    android:layout_height="196dp"
                   style="@style/viewstyle"
                    app:srcCompat="@drawable/batman"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/buttonbatman"
                    style="@style/buttonstyle"
                    android:onClick="buttonbatman"
                    android:text="@string/detali"
                    tools:ignore="MissingConstraints" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="412dp"
                android:layout_height="282dp"
                android:layout_marginTop="10dp"
                android:minHeight="300dp"
                app:cardBackgroundColor="#EFEDE9"
                app:cardCornerRadius="25dp"
                app:cardElevation="16dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-2dp">

                <TextView
                    android:id="@+id/textdevill"
                    android:layout_width="112dp"
                    android:layout_height="38dp"
                    android:text="@string/devil"
                    style="@style/textstyle"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imagedevil"
                    android:layout_width="155dp"
                    android:layout_height="196dp"
                    style="@style/viewstyle"
                    app:srcCompat="@drawable/devil"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/buttondevil"
                    style="@style/buttonstyle"
                    android:onClick="buttondevil"
                    android:text="@string/detali"
                    tools:ignore="MissingConstraints" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="412dp"
                android:layout_height="282dp"
                android:layout_marginTop="10dp"
                android:minHeight="300dp"
                app:cardBackgroundColor="#EFEDE9"
                app:cardCornerRadius="25dp"
                app:cardElevation="16dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-2dp">

                <TextView
                    android:id="@+id/textmutanti"
                    android:layout_width="112dp"
                    android:layout_height="38dp"
                    android:text="@string/mutanti"
                    style="@style/textstyle"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imagemutanti"
                    android:layout_width="154dp"
                    android:layout_height="196dp"
                   style="@style/viewstyle"
                    app:srcCompat="@drawable/mutanti"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/buttonmutanti"
                    style="@style/buttonstyle"
                    android:onClick="buttonmutanti"
                    android:text="@string/detali"
                    tools:ignore="MissingConstraints" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="412dp"
                android:layout_height="282dp"
                android:layout_marginTop="10dp"
                android:minHeight="300dp"
                app:cardBackgroundColor="#EFEDE9"
                app:cardCornerRadius="25dp"
                app:cardElevation="16dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-2dp">

                <TextView
                    android:id="@+id/textxxx"
                    android:layout_width="112dp"
                    android:layout_height="38dp"
                    style="@style/textstyle"
                    android:text="@string/xxx"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imagexxx"
                    style="@style/viewstyle"
                    android:layout_width="159dp"
                    android:layout_height="196dp"
                    app:srcCompat="@drawable/xxx"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/buttonxxx"
                    style="@style/buttonstyle"
                    android:onClick="buttonxxx"
                    android:text="@string/detali"
                    tools:ignore="MissingConstraints" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


